--- a/webview.html
+++ b/webview.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div id="calculator"></div>
-  <script src="https://www.desmos.com/api/v1.10/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
+  <script src="DESMOS_LOCAL_URI"></script>
   <script>
     const vscode = acquireVsCodeApi();
     const Calc = Desmos.GraphingCalculator(document.getElementById('calculator'));
